--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,6 +6,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
+  --ifm-font-family-base: 'Saira';
   --ifm-color-primary: #c22525;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
@@ -27,4 +28,8 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+}
+
+{
+@import url('https://fonts.googleapis.com/css2?family=Saira&display=swap');
 }
