--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Saira&display=swap');
+
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
@@ -6,7 +8,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  /* --ifm-font-family-base: 'Saira';*/
+  --ifm-font-family-base: 'Saira';
   --ifm-color-primary: #c22525;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
@@ -28,8 +30,4 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-}
-
-{
-/*@import url('https://fonts.googleapis.com/css2?family=Saira&display=swap'); */
 }
